# mlx-train

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: README.md  ROADMAP.md  quickstart.md
docs/api/: core.md  models.md  training.md
docs/examples/: basic_training.md  custom_model.md  distributed_setup.md
docs/getting_started/: installation.md  quickstart.md
docs/guides/: contributing.md  distributed_training.md  memory_optimization.md  model_development.md
mlx_train/: __init__.py
mlx_train/cli/: export.py  main.py
mlx_train/core/: config.py  discovery.py  distributed.py  environment.py  export.py  hardware.py  memory_optimizer.py  template.py
mlx_train/data/: __init__.py  manager.py  preprocessor.py
mlx_train/models/: __init__.py  base.py  builder.py  registry.py
mlx_train/models/architectures/: __init__.py  lora.py  simple_model.py  test_model.py
mlx_train/training/: distributed.py  orchestrator.py  visualization.py
mlx_train/utils/: experiment.py  memory.py  metrics.py
scripts/: mlx-train.sh  run_tests.sh
serving/: server.py
tests/: conftest.py  test_benchmarks.py  test_core.py  test_data.py  test_distributed.py  test_export.py  test_training.py
