[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-train"
version = "0.1.0"
description = "Distributed training framework for Apple Silicon using MLX"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mlx", "machine learning", "distributed training", "apple silicon", "metal", "neural networks"]
authors = [
    { name = "Jarrod Barnes", email = "jbarnes850@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
    "Operating System :: MacOS :: MacOS X",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "mlx>=0.21.0",
    "numpy>=1.24.0",
    "mpi4py>=3.1.4",
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "datasets>=2.15.0",
    "huggingface-hub>=0.19.0",
    "pandas>=2.1.0",
    "langchain>=0.1.0",
    "typer>=0.9.0",
    "pydantic>=2.5.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "plotext>=5.2.8",
    "unstructured>=0.10.0",
    "python-magic>=0.4.27",
    "psutil>=5.9.0",
    "pyyaml>=6.0.1",
    "colorama>=0.4.6",
    "typing-extensions>=4.8.0",
    "tqdm>=4.65.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0"
]
distributed = [
    "netifaces>=0.11.0",    # For network interface detection
    "zeroconf>=0.38.0",     # For device discovery
    "paramiko>=3.3.1",      # For SSH connections
    "tenacity>=8.2.3"       # For retry logic
]
monitoring = [
    "psutil>=5.9.0",        # Already in main deps, but listed for clarity
    "py-cpuinfo>=9.0.0"     # For CPU info
]
all = [
    "mlx-train[dev]",
    "mlx-train[distributed]",
    "mlx-train[monitoring]"
]

[project.scripts]
mlx-train = "mlx_train.cli:main"

[tool.setuptools]
packages = [
    "mlx_train",
    "mlx_train.core",
    "mlx_train.models",
    "mlx_train.data",
    "mlx_train.utils",
    "mlx_train.training",
    "mlx_train.cli"
]

[project.urls]
Homepage = "https://github.com/jbarnes850/mlx-train"
Documentation = "https://github.com/jbarnes850/mlx-train/docs"
"Bug Tracker" = "https://github.com/jbarnes850/mlx-train/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=mlx_train --cov-report=term-missing"
markers = [
    "distributed: marks tests as distributed (deselect with '-m \"not distributed\"')",
    "hardware: marks tests that require specific hardware",
    "network: marks tests that require network access"
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
known_first_party = ["mlx_train"]
known_third_party = ["mlx", "numpy", "pytest"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = ["E501"]
target-version = "py310"
  